	table generation if necessary.
	* version.c: Record whether unwind support is compiled in.
	* sysdeps/pthread/configure.in: Add checks for unwind unterfaces.
	* sysdeps/pthread/bits/libc-lock.h: Add prototypes of the old cleanup
	handler interfaces.
	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h: Add quite a bit of
	complication to generate unwind information for syscall wrappers.
	* sysdeps/unix/sysv/linux/i386/bits/pthreadtypes.h: Define
	__cleanup_fct_attribute.

	* Makefile: Add rules to build and run tst-cleanup0.
	* tst-cleanup0.c: New file.
	* tst-cleanup0.expect: New file.

	* pthread_create.c (deallocate_tsd): Don't take parameter.  Adjust
	caller.  Optimize to avoid often unecessary local variable.

2003-04-11  Roland McGrath  <roland@redhat.com>

	* Makefile ($(objpfx)multidir.mk): New target, generated makefile that
	sets variable `multidir'; include that.
	(generated): Add it.
	($(objpfx)$(multidir)/crti.o): New target.
	[$(multidir) != .] (generated-dirs, extra-objs, omit-deps): Add it.

2003-04-11  Ulrich Drepper  <drepper@redhat.com>

	* tst-attr2.c (do_test): Add cast to avoid warning.
	* tst-mutex4.c (do_test): Likewise.

2003-04-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/fork.c (__libc_fork): Reset CPU clocks
	in child.

2003-04-09  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-detach1.
	* tst-detach1.c: New file.

2003-04-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread.h: Remove duplicate
	pthread_cleanup_{push,pop} definitions.

	* tst-barrier2.c: Eliminate warnings.
	* tst-cancel4.c: Likewise.
	* tst-cond4.c: Likewise.
	* tst-cond6.c: Likewise.
	* tst-detach1.c: Likewise.
	* tst-rwlock4.c: Likewise.
	* tst-rwlock6.c: Likewise.
	* tst-rwlock7.c: Likewise.
	* tst-sem3.c: Likewise.
	* tst-spin2.c: Likewise.
	* tst-umask1.c: Likewise.

2003-04-07  Ulrich Drepper  <drepper@redhat.com>

	* pthread_detach.c (pthread_detach): Fix test for invalid TID.
