@@ -385,12 +385,12 @@ extern void pthread_testcancel (void) __THROW;
 
 typedef struct
 {
-  void *__pad[16];
   struct
   {
     __jmp_buf __cancel_jmp_buf;
     int __mask_was_saved;
   } __cancel_jmp_buf[1];
+  void *__pad[4];
 } __pthread_unwind_buf_t __attribute__ ((__aligned__));
 
 /* No special attributes by default.  */
